[package]
name = "spl_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.27.0", features=["init-if-needed"] }
anchor-spl = "0.27.0"
toml_datetime = "=0.6.0"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }

