# cargo-features = ["workspace-inheritance"]

[package]
name = "wba_escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wba_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.27.0"
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
toml_datetime = "0.6.0"
# anchor-lang = {workspace = true}
# anchor-spl = {workspace = true}
# toml-datetime = {workspace = true}
